--- a/Fundoo/src/app/components/dashboard/dashboard.component.scss
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.scss
@@ -77,6 +77,24 @@
     margin-right:10px;
   }
 
+
+  .active{
+    // color: #FFFF00;
+    background-color:#FFE4B5;
+  }
+
+  .list-color{
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+  }
+  
+  .para{
+    font-size: 12px;
+    margin-left: 19px;
+  }
+
+
+
   // .q{
   //   max-width: 300px;
   //   margin-left: 35px;
