--- a/Fundoo/src/app/components/display-notes/display-notes.component.scss
+++ b/Fundoo/src/app/components/display-notes/display-notes.component.scss
@@ -47,3 +47,11 @@
 // .example-chip-list{
 //     visibility: hidden;
 // }
+
+// ::ng-deep .mat-standard-chip{
+//     min-height: 25px;
+// }
+
+.chip{
+    min-height: 22px;
+}
