--- a/Fundoo/src/app/components/icon-list/icon-list.component.html
+++ b/Fundoo/src/app/components/icon-list/icon-list.component.html
@@ -4,7 +4,7 @@
   </button>
 
   <mat-menu #remainder="matMenu" class="matmenu">
-    <p>Remainder :</p>
+    <p class="para">Remainder :</p>
     <!-- <button mat-menu-item>Reminder :</button> -->
     <button mat-menu-item (click) = setRemainderForToday()>Later Today &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 8:00 PM</button>
     <button mat-menu-item (click) = setRemainderForTommorow()>Tomorrow &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 8:00 PM</button>
