--- a/Fundoo/src/app/components/dashboard/dashboard.component.html
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.html
@@ -126,30 +126,31 @@
       fixedTopGap="56">
       <mat-nav-list class="navList">
         <mat-list role="list">
-          <div>
-            <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="Note()">
+         
+          <div >
+            <mat-list-item  class="list-color" role="listitem" routerLinkActive="active" routerLink="/dashboard/note" (click)="Note()">
               <img id="img1" src="../../../assets/noteImg.svg" />
               <span class="notes">Notes</span>
             </mat-list-item>
           </div>
           <div>
-            <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="Remainder()">
+            <mat-list-item class="list-color" role="listitem" routerLinkActive="active" routerLink="/dashboard/display-remainder" (click)="Remainder()">
               <img id="img2" src="../../../assets/remainder.svg" />
               <span class="remainders">Remainders</span>
             </mat-list-item>
           </div>
           <mat-divider></mat-divider>
           <div>
-            <p id="para">LABELS</p>
+            <p class="para">LABELS</p>
             <div *ngFor="let item of label" class="label">
-              <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="labelNote(item.labelId)">
+              <mat-list-item class="list-color" role="listitem" routerLinkActive="active" (click)="labelNote(item.labelId)">
                 <img id="img1" src="../../../assets/label.svg" />
                 <span class="notes">{{item.name}}</span>
               </mat-list-item>
               <!-- <button mat-button>{{item.name}}</button> -->
             </div>
             <div>
-              <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="editLabels()">
+              <mat-list-item class="list-color" role="listitem" routerLinkActive="active" (click)="editLabels()">
                 <img id="img2" src="../../../assets/editLabel.svg" />
                 <span class="labels">Edit labels</span>
               </mat-list-item>
@@ -157,13 +158,13 @@
           </div>
           <mat-divider></mat-divider>
           <div>
-            <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="archive()">
+            <mat-list-item class="list-color" role="listitem" routerLinkActive="active" routerLink="/dashboard/display-archive" (click)="archive()">
               <img id="img3" src="../../../assets/archive.svg" />
               <span class="archive">Archive</span>
             </mat-list-item>
           </div>
           <div>
-            <mat-list-item role="listitem" routerLinkActive="router-link-active" (click)="trash()">
+            <mat-list-item  class="list-color" role="listitem" routerLinkActive="active" routerLink="/dashboard/display-trash" (click)="trash()">
               <img id="img3" src="../../../assets/trash.svg" />
               <span class="trash">Trash</span>
             </mat-list-item>
