--- a/Fundoo/src/app/components/display-notes/display-notes.component.html
+++ b/Fundoo/src/app/components/display-notes/display-notes.component.html
@@ -28,7 +28,7 @@
 
           <div class="example-chip-list">
             <mat-chip-list #chipList>
-              <mat-chip *ngFor="let label of items.label" [selectable]="selectable" [removable]="removable"
+              <mat-chip class="chip" *ngFor="let label of items.label" [selectable]="selectable" [removable]="removable"
                 (removed)="remove(label,items.noteId)">
                 {{label.name}}
                 <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
@@ -39,7 +39,7 @@
             <div class="example-chip-list">
               <br>
               <mat-chip-list #chipList class = "remainder">
-                <mat-chip [removable]="removable" [selectable]="selectable" (removed)="removeRemainder(items)">
+                <mat-chip class="chip" [removable]="removable" [selectable]="selectable" (removed)="removeRemainder(items)">
                   {{items.remainder | date:'medium'}}
                 <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                 </mat-chip>
@@ -92,14 +92,28 @@
             <span (click)="openDialog(items)">{{items.description}}</span>
           </div>
 
+          
           <div class="example-chip-list">
             <mat-chip-list #chipList>
-              <mat-chip *ngFor="let label of items.label" [selectable]="selectable" [removable]="removable"
+              <mat-chip class="chip" *ngFor="let label of items.label" [selectable]="selectable" [removable]="removable"
                 (removed)="remove(label,items.noteId)">
                 {{label.name}}
                 <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
               </mat-chip>
             </mat-chip-list>
+          </div>
+
+          <div *ngIf = "items.remainder != null" >
+              <div class="example-chip-list">
+                <br>
+                <mat-chip-list #chipList class = "remainder">
+                  <mat-chip class="chip" [removable]="removable" [selectable]="selectable" (removed)="removeRemainder(items)">
+                    {{items.remainder | date:'medium'}}
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                  </mat-chip>
+                  <!-- <input [matChipInputFor]="chipList"> -->
+                </mat-chip-list>
+              </div>
           </div>
 
           <div class="icons-div">
