--- a/Fundoo/src/app/components/profilepic/profilepic.component.html
+++ b/Fundoo/src/app/components/profilepic/profilepic.component.html
@@ -15,7 +15,8 @@
 
       <!-- <img [src]="croppedImage" /> -->
     </div>
-    <div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start end">
+    <div class = "set-profile" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start end">
+        <mat-divider></mat-divider>
       <button mat-raised-button color="primary" [mat-dialog-close]="crop" cdkFocusInitial (click)="setProfile()">Set
         profile photo</button>
       <button mat-button (click)="onNoClick()">Cancel</button>
