--- a/Fundoo/src/app/components/dashboard/dashboard.component.html
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.html
@@ -76,7 +76,7 @@
           </button>
           <mat-menu #accountMenu="matMenu">
             <!-- <ng-template matMenuContent> -->
-            <div class="example-card" class="q">
+            <div class="example-car" class="">
               <!-- <mat-card> -->
                   <div mat-card-avatar matTooltip="Profile" class="profile" (click)="ProfileSelect()" fxLayout="row">
                       <img mat-card-avatar class="profile" src="http://localhost:8080/getImage/{{token}}" />
@@ -87,7 +87,7 @@
                   <mat-divider></mat-divider>
                   <br>
                   <!-- <mat-card-actions> -->
-                    <div fxLayoutAlign="end end" class = "signout">
+                    <div fxLayoutAlign="end end" class = "signou">
                         <button mat-raised-button (click)="signOut()">SignOut</button>
                     </div>
               <!-- </mat-card> -->
