--- a/Fundoo/src/app/components/display-notes/display-notes.component.html
+++ b/Fundoo/src/app/components/display-notes/display-notes.component.html
@@ -35,19 +35,21 @@
               </mat-chip>
             </mat-chip-list>
           </div>
-          <div *ngIf = "items.remainder != null" >
+
+          <div *ngIf="items.remainder != null">
             <div class="example-chip-list">
               <br>
-              <mat-chip-list #chipList class = "remainder">
-                <mat-chip class="chip" [removable]="removable" [selectable]="selectable" (removed)="removeRemainder(items)">
+              <mat-chip-list #chipList class="remainder">
+                <mat-chip class="chip" [removable]="removable" [selectable]="selectable"
+                  (removed)="removeRemainder(items)">
                   {{items.remainder | date:'medium'}}
-                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                 </mat-chip>
                 <!-- <input [matChipInputFor]="chipList"> -->
               </mat-chip-list>
             </div>
           </div>
-          
+
           <!-- <div class="example-chip-list">
               <mat-chip-list #chipList>
                 <mat-chip class="chip" *ngFor="let collaborator of items.collaboratedUser" [selectable]="selectable" [removable]="removable"
@@ -57,34 +59,35 @@
                 </mat-chip>
               </mat-chip-list>
             </div> -->
-            <div *ngFor="let collaborator of items.collaboratedUser">
-                <button mat-mini-fab matTooltip = "items.collaborator.email">
-                    <img mat-card-avatar src="http://localhost:8080/getImage/{{token}}" />
-                </button>
-            </div>
-            
+          <div *ngFor="let collaborator of items.collaboratedUser" >
+            <button class = "collaborator" mat-mini-fab matTooltip={{collaborator.email}} color="primary" (click)="openDialog1(items)">
+              <!-- <img mat-card-avatar src="http://localhost:8080/getImage/{{token}}" /> -->
+              <mat-icon>account_circle</mat-icon>
+            </button>
+          </div>
+
 
           <div class="icons-div">
-            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end"
-              >
+            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end">
             </app-icon-list>
           </div>
+          
         </mat-card>
       </div>
     </div>
   </div>
 
-  
+
   <div *ngIf="subscribeView" class="mininote" fxLayout="column wrap" fxLayoutAlign="center center" fxFlex.xs="98"
-    fxLayoutGap="10px" >
+    fxLayoutGap="10px">
 
     <!-- <div *ngFor="let items of cardsArray" class="card"> -->
     <div *ngFor="let items of card" class="card">
 
       <!-- <div *ngIf="items.archive==false && items.trash==false && items.pinned==true"> -->
-      <div class = "matcard" *ngIf="items.archive==false && items.trash==false">
+      <div class="matcard" *ngIf="items.archive==false && items.trash==false">
         <mat-card class="minicard" [style.backgroundColor]="items.color">
-          <div fxLayout="row" fxLayoutAlign="space-between start" >
+          <div fxLayout="row" fxLayoutAlign="space-between start">
 
             <div fxLayout="row" class="title">
               <span (click)="openDialog(items)">{{items.title}}</span>
@@ -100,14 +103,14 @@
                 </div>
               </button>
             </div>
-            
+
           </div>
 
           <div>
             <span (click)="openDialog(items)">{{items.description}}</span>
           </div>
 
-          
+
           <div class="example-chip-list">
             <mat-chip-list #chipList>
               <mat-chip class="chip" *ngFor="let label of items.label" [selectable]="selectable" [removable]="removable"
@@ -118,23 +121,25 @@
             </mat-chip-list>
           </div>
 
-          <div *ngIf = "items.remainder != null" >
-              <div class="example-chip-list">
-                <br>
-                <mat-chip-list #chipList class = "remainder">
-                  <mat-chip class="chip" [removable]="removable" [selectable]="selectable" (removed)="removeRemainder(items)">
-                    {{items.remainder | date:'medium'}}
+          <div *ngIf="items.remainder != null">
+            <div class="example-chip-list">
+              <br>
+              <mat-chip-list #chipList class="remainder">
+                <mat-chip class="chip" [removable]="removable" [selectable]="selectable"
+                  (removed)="removeRemainder(items)">
+                  {{items.remainder | date:'medium'}}
                   <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                  </mat-chip>
-                  <!-- <input [matChipInputFor]="chipList"> -->
-                </mat-chip-list>
-              </div>
+                </mat-chip>
+                <!-- <input [matChipInputFor]="chipList"> -->
+              </mat-chip-list>
+            </div>
           </div>
 
           <div class="icons-div">
             <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end">
             </app-icon-list>
           </div>
+
         </mat-card>
       </div>
     </div>
