--- a/Fundoo/src/app/components/dashboard/dashboard.component.scss
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.scss
@@ -77,10 +77,10 @@
     margin-right:10px;
   }
 
-
   .active{
     // color: #FFFF00;
     background-color:#FFE4B5;
+    border-radius: 0px 30px 30px 0px;
   }
 
   .list-color{
