--- a/Fundoo/src/app/components/icon-list/icon-list.component.html
+++ b/Fundoo/src/app/components/icon-list/icon-list.component.html
@@ -53,7 +53,7 @@
       <div class="buttons">
         <div fxLayout=row fxLayoutGap=10px style="margin-top:5px" *ngFor='let colors of colorArray'>
           <div *ngFor='let color of colors'>
-            <button class="colors" [ngStyle]="{'background-color': color.color }" (click)='colorsEdit(color.name)'
+            <button class="colors" [ngStyle]="{'background-color': color.color }" (click)='colorsEdit(color.color)'
               matTooltip="{{color.name}}" mat-mini-fab></button>
           </div>
         </div>
