--- a/Fundoo/src/app/components/forgetpassword/forgetpassword.component.html
+++ b/Fundoo/src/app/components/forgetpassword/forgetpassword.component.html
@@ -1,4 +1,46 @@
-<div fxLayout="row" fxLayoutAlign="space-around center" fxFlex="100" >
+<div class = "forget" fxLayoutAlign="center center">
+  <mat-card class="card" fxLayout="column" fxLayoutAlign="center center" fxLayoutAlign.xs="none center" fxFlex=60 fxFlex.lt-lg=100>
+      <mat-card-header>
+        <mat-card-title class="title" fxLayoutAlign="center center" >
+          <h2>Fundoo</h2>
+        </mat-card-title>
+        <mat-card-subtitle class="subtitle" fxLayoutAlign="center center" >
+          <h3>Find your Fundoo account</h3>
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-form-field class="email" appearance="outline" >
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="" [formControl]="email" required>
+        <mat-icon matSuffix>email</mat-icon>
+        <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+      </mat-form-field>
+    <div class = 'submit' fxLayoutAlign="center center">
+      <button mat-raised-button color="primary" (click)="forgetPassword()">Submit</button>
+    </div>
+    <div class = 'back' fxLayoutAlign="center center">
+      <a mat-button routerLink="/login">back</a>
+    </div>
+</mat-card>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div fxLayout="row" fxLayoutAlign="space-around center" fxFlex="100" >
   <mat-card class="card" fxLayoutAlign="center center" fxFlex="30" >
     <div>
       <div fxLayout="column">
@@ -27,7 +69,7 @@
       </div>
     </div>
   </mat-card>
-  </div>
+  </div> -->
 
 
 
