--- a/Fundoo/src/app/components/forgetpassword/forgetpassword.component.scss
+++ b/Fundoo/src/app/components/forgetpassword/forgetpassword.component.scss
@@ -1,12 +1,51 @@
 .title{
     color:red;
+    word-break: break-all;
 }
 .subtitle{
     color:royalblue;
+    word-break: break-all;
 }
 .back{
     color:blue;
 }
+
+@media only screen and (max-width: 600px) { 
 .card{
-    margin-top: 100px
+    height: -webkit-fill-available;
+    width: 100%;
 }
+}
+
+.email{
+    width:75%;
+}
+
+
+.forget{
+    height: -webkit-fill-available;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+// .title{
+//     color:red;
+// }
+// .subtitle{
+//     color:royalblue;
+// }
+// .back{
+//     color:blue;
+// }
+// .card{
+//     margin-top: 100px
+// }
