--- a/Fundoo/src/app/components/note/note.component.html
+++ b/Fundoo/src/app/components/note/note.component.html
@@ -1,7 +1,7 @@
 
 
 <!-- take a note -->
-<app-maincard (messageEvent)='update($event)' ></app-maincard>
+<app-maincard (messageEvent)='update($event)' [card1] = "card"></app-maincard>
 
 
 
