--- a/Fundoo/src/app/components/register/register.component.scss
+++ b/Fundoo/src/app/components/register/register.component.scss
@@ -13,3 +13,43 @@
 .signin{
     color:royalblue;
 }
+@media only screen and (max-width: 600px) {
+.email{
+    width:87%;
+}
+.mobile{
+    width:87%;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .main{
+//     height: 100vh;
+// }
+
+// .fundoo{
+//     color:red;
+// }
+
+// .create{
+//     color:blue;
+// }
+
+// .signin{
+//     color:royalblue;
+// }
