--- a/Fundoo/src/app/components/resetpassword/resetpassword.component.scss
+++ b/Fundoo/src/app/components/resetpassword/resetpassword.component.scss
@@ -1,9 +1,46 @@
 .reset-page{
-    margin-top: 100px;
-}
-.fundoo{
-    color:royalblue;
-}
-.resetPassword{
-    color:red;
-}
+    // margin-top: 100px;
+     height: -webkit-fill-available;
+ }
+ .fundoo{
+     color:royalblue;
+     word-break: break-all;
+ }
+ .resetPassword{
+     color:red;
+     word-break: break-all;
+ }
+ 
+ @media only screen and (max-width: 600px){
+     .card{
+         height: -webkit-fill-available;
+     }
+ }
+ 
+ 
+ 
+ .inputForm{
+    // width:65%;
+    width:100%;
+ }
+ 
+ .mainDiv{
+     height: -webkit-fill-available;
+ }
+ 
+
+
+
+
+
+
+
+// .reset-page{
+//     margin-top: 100px;
+// }
+// .fundoo{
+//     color:royalblue;
+// }
+// .resetPassword{
+//     color:red;
+// }
