--- a/Fundoo/src/app/components/register/register.component.html
+++ b/Fundoo/src/app/components/register/register.component.html
@@ -1,4 +1,94 @@
 <div class="main" fxLayout="row" fxLayoutAlign="center center">
+  <mat-card class="mainDiv" fxFlex="60" fxLayout="column" fxLayoutAlign="center center" fxFlex.lg="50" fxFlex.md="75" fxFlex.sm="100" fxFlex.xs="100">
+    <mat-card-header>
+      <mat-card-title class="fundoo">
+        <div fxLayoutAlign="center center">
+            <h2>FUNDOO</h2>
+        </div>
+        
+      </mat-card-title>
+      <mat-card-subtitle class = "create" fxLayoutAlign="center center">
+        <h3>Create a new account</h3>
+      </mat-card-subtitle>
+      </mat-card-header>
+      <form class="inputForm" fxLayout="column">
+        <div  fxLayoutGap='6%' fxLayoutGap.xs='3%' fxLayout="row" fxLayoutAlign="center center">
+          <mat-form-field appearance="outline" fxFlex='47' fxFlex.xs="42">
+            <mat-label>FirstName</mat-label>
+            <input matInput placeholder="" [formControl]="firstName" required>
+            <mat-error *ngIf="firstName.invalid">{{getErrorMessageOfFirstName()}}</mat-error>
+          </mat-form-field>
+  
+          <mat-form-field appearance="outline" fxFlex='47'  fxFlex.xs="42">
+            <mat-label>LastName</mat-label>
+            <input matInput placeholder=""  [formControl]="lastName" required>
+            <mat-error *ngIf="lastName.invalid">{{getErrorMessageOfLastName()}}</mat-error>
+          </mat-form-field>
+  
+        </div>
+        <div fxLayoutGap='6%' fxLayoutGap.xs='2%'  fxLayoutAlign="center center" fxLayout.xs="column">
+          <mat-form-field class="email" appearance="outline" fxFlex='47'>
+            <mat-label>Email Address</mat-label>
+            <input matInput placeholder="" [formControl]="email" required>
+            <mat-error *ngIf="email.invalid">{{getErrorMessageOfEmail()}}</mat-error>
+            <mat-icon matSuffix>email</mat-icon>
+          </mat-form-field>
+  
+          <mat-form-field class="mobile" appearance="outline" fxFlex='47'>
+            <mat-label>Mobile Number</mat-label>
+            <input matInput placeholder="" [formControl]="mobileNumber" required>
+            <mat-error *ngIf="mobileNumber.invalid">{{getErrorMessageOfMobileNumber()}}</mat-error>
+            <mat-icon matSuffix>settings_cell</mat-icon>
+          </mat-form-field>
+  
+        </div>
+        <div  fxLayoutGap='6%' fxLayoutGap.xs='3%' fxLayoutAlign="center center">
+          <mat-form-field appearance="outline" fxFlex='47'  fxFlex.xs="42">
+            <mat-label>Password</mat-label>
+            <input matInput placeholder="" [formControl]="password" [type]="hide ? 'password' : 'text'" required>
+            <mat-error *ngIf="password.invalid">{{getErrorMessagePassword()}}</mat-error>
+            <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </mat-form-field>
+          <mat-form-field appearance="outline" fxFlex='47'  fxFlex.xs="42">
+            <mat-label>Confirm Password</mat-label>
+            <input matInput placeholder="" [formControl]="confirmPassword" [type]="hide1 ? 'password' : 'text'" required>
+            <mat-error *ngIf="confirmPassword.invalid">{{getErrorMessageOfConfirmPassword()}}</mat-error>
+            <mat-icon matSuffix (click)="hide1 = !hide1">{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </mat-form-field>
+        </div>
+        <div fxLayoutAlign="center center">
+          <button mat-raised-button color="primary" (click)="register()" >Submit</button>
+        </div>
+        <div class = "signin" fxLayoutAlign="center center">
+            <a mat-button routerLink="/login">Sign in</a>
+        </div>
+      </form>
+    </mat-card>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="main" fxLayout="row" fxLayoutAlign="center center">
   <mat-card class="mainDiv" fxFlex="45" fxLayout="column" fxLayoutAlign="center center">
     <mat-card-header>
       <mat-card-title class="fundoo" fxLayoutAlign="center center">
@@ -61,4 +151,4 @@
         </div>
       </form>
     </mat-card>
-  </div>
+  </div> -->
