--- a/Fundoo/src/app/components/resetpassword/resetpassword.component.html
+++ b/Fundoo/src/app/components/resetpassword/resetpassword.component.html
@@ -1,23 +1,53 @@
-<div class="reset-page" fxLayoutAlign="center center">
+<div class="reset-page" fxLayoutAlign="center center" >
+    <mat-card class="card" fxLayoutGap="5%" fxLayout="column" fxLayoutAlign="center center" fxFlex="50" fxFlex.xs="100" fxLayoutAlign.xs="none center">
+         <mat-card-title class = "fundoo">Fundoo</mat-card-title>
+         <mat-card-subtitle class = "resetPassword">Reset Your Password</mat-card-subtitle>
+         <!-- <div class="newPassword"> -->
+         <mat-card-content>
+             <mat-form-field>
+                 <input matInput placeholder="New password" [formControl]="newPassword" [type]="hide ? 'password' : 'text'">
+                 <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+             </mat-form-field>
+         </mat-card-content>
+             <!-- </div> -->
+             <!-- <div class="confirmNewPassword"> -->
+         <mat-card-content>
+             <mat-form-field>
+                 <input matInput placeholder="Confirm new password" [formControl]="confirmPassword" [type]="hide1 ? 'password' : 'text'">
+                 <mat-icon matSuffix (click)="hide1 = !hide1">{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
+             </mat-form-field>
+         </mat-card-content>
+         <!-- </div> -->
+         <button mat-raised-button color="primary" (click)="resetPassword()">Change your Password</button>
+     </mat-card>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="reset-page" fxLayoutAlign="center center">
   <mat-card fxLayout="column" fxLayoutAlign="center center">
        <mat-card-title class = "fundoo">Fundoo</mat-card-title>
        <mat-card-subtitle class = "resetPassword">Reset Your Password</mat-card-subtitle>
-       <!-- <div class="newPassword"> -->
        <mat-card-content>
            <mat-form-field>
                <input matInput placeholder="New password" [formControl]="newPassword" [type]="hide ? 'password' : 'text'">
                <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
            </mat-form-field>
        </mat-card-content>
-           <!-- </div> -->
-           <!-- <div class="confirmNewPassword"> -->
        <mat-card-content>
            <mat-form-field>
                <input matInput placeholder="Confirm new password" [formControl]="confirmPassword" [type]="hide1 ? 'password' : 'text'">
                <mat-icon matSuffix (click)="hide1 = !hide1">{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
            </mat-form-field>
        </mat-card-content>
-       <!-- </div> -->
        <button mat-raised-button color="primary" (click)="resetPassword()">Change your Password</button>
    </mat-card>
-</div>
+</div> -->
