update collaborator displaynotes

--- a/Fundoo/src/app/components/collaborator-dialog/collaborator-dialog.component.html
+++ b/Fundoo/src/app/components/collaborator-dialog/collaborator-dialog.component.html
@@ -7,7 +7,8 @@
         <!-- <img mat-card-avatar src="data.user.profileImage" /> -->
     </button>
     <div fxLayout="column">
-            <B><span class="name">{{data.user.firstName}}&nbsp;{{data.user.lastName}}</span></B>
+            <!-- <B><span class="name">{{data.user.firstName}}&nbsp;{{data.user.lastName}}</span></B> -->
+            <span class="name"><B>{{data.user.firstName}}</B>&nbsp;<B>{{data.user.lastName}}</B>(Owner)</span>
             <span class="email">{{email}}</span>
     </div>
 </div>
