--- a/Fundoo/src/app/components/icon-list/icon-list.component.html
+++ b/Fundoo/src/app/components/icon-list/icon-list.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxFlex="70" fxLayoutAlign="space-around end">
+<div fxLayout="row" fxFlex="70" fxLayoutAlign="space-between end">
   <button id="Remind" matTooltip="Remind me" mat-icon-button [matMenuTriggerFor]="remainder">
     <img class="icon" id="remindmeImage" src="../../../assets/remindme.svg" />
   </button>
