--- a/Fundoo/src/app/components/display-notes/display-notes.component.html
+++ b/Fundoo/src/app/components/display-notes/display-notes.component.html
@@ -1,14 +1,13 @@
+
+
 <div class="display">
-  <div *ngIf="!subscribeView" class="mininote" fxLayout="row wrap" fxLayoutAlign="start start" fxFlex.xs="98"
-    fxLayoutGap="10px" fxFlex="88">
+  <div [ngClass]="subscribeView==false?'row':'column'" class="mininote" fxFlex.xs="98" fxLayoutGap="10px" fxFlex="88">
 
-    <!-- <div *ngFor="let items of cardsArray" class="card"> -->
-    <div *ngFor="let items of card" class="card">
+   
+    <div *ngFor="let items of card"  class="card">
 
-      <!-- <div *ngIf="items.archive==false && items.trash==false && items.pinned==true"> -->
-      <!-- <div *ngIf="items.archive == false && items.trash == false"> -->
         <mat-card class="minicard" [style.backgroundColor]="items.color">
-          <div fxLayout="row" fxLayoutAlign="space-between start">
+          <div fxLayout="row" fxLayoutAlign="space-between start" class="title_pin">
             <div fxLayout="row" class="title">
               <span (click)="openDialog(items)">{{items.title}}</span>
             </div>
@@ -43,49 +42,50 @@
                 <mat-chip class="chip" [removable]="removable" [selectable]="selectable"
                   (removed)="removeRemainder(items)">
                   {{items.remainder | date:'MMM'}}&nbsp;{{items.remainder | date:'d'}},&nbsp;{{items.remainder | date:'shortTime'}}
-                  <!-- {{items.remainder | date:'medium'}} -->
                   <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                 </mat-chip>
-                <!-- <input [matChipInputFor]="chipList"> -->
               </mat-chip-list>
             </div>
           </div>
 
-          <!-- <div class="example-chip-list">
-              <mat-chip-list #chipList>
-                <mat-chip class="chip" *ngFor="let collaborator of items.collaboratedUser" [selectable]="selectable" [removable]="removable"
-                  (removed)="remove(label,items.noteId)">
-                  {{label.name}}
-                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-              </mat-chip-list>
-            </div> -->
+         
           <div *ngFor="let collaborator of items.collaboratedUser" >
             <button class = "collaborator" mat-mini-fab matTooltip={{collaborator.email}} color="primary" (click)="openDialog1(items)">
-              <!-- <img mat-card-avatar src="http://localhost:8080/getImage/{{token}}" /> -->
+              
               <mat-icon>account_circle</mat-icon>
             </button>
           </div>
 
 
           <div class="icons-div">
-            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end">
+            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event)>
             </app-icon-list>
           </div>
           
         </mat-card>
-      <!-- </div> -->
     </div>
   </div>
 
 
-  <div *ngIf="subscribeView" class="mininote" fxLayout="column wrap" fxLayoutAlign="center center" fxFlex.xs="98"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+  <!-- <div *ngIf="subscribeView" class="mininote" fxLayout="column wrap" fxLayoutAlign="center center" fxFlex.xs="98"
     fxLayoutGap="10px">
-
-    <!-- <div *ngFor="let items of cardsArray" class="card"> -->
     <div *ngFor="let items of card" class="card">
-
-      <!-- <div *ngIf="items.archive==false && items.trash==false && items.pinned==true"> -->
       <div class="matcard" *ngIf="items.archive==false && items.trash==false">
         <mat-card class="minicard" [style.backgroundColor]="items.color">
           <div fxLayout="row" fxLayoutAlign="space-between start">
@@ -131,7 +131,6 @@
                   {{items.remainder | date:'medium'}}
                   <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                 </mat-chip>
-                <!-- <input [matChipInputFor]="chipList"> -->
               </mat-chip-list>
             </div>
           </div>
@@ -145,11 +144,179 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="display">
+  <div *ngIf="!subscribeView" class="mininote" fxLayout="row wrap" fxLayoutAlign="start start" fxFlex.xs="98"
+    fxLayoutGap="10px" fxFlex="88">
+
+   
+    <div *ngFor="let items of card" class="card">
+
+        <mat-card class="minicard" [style.backgroundColor]="items.color">
+          <div fxLayout="row" fxLayoutAlign="space-between start">
+            <div fxLayout="row" class="title">
+              <span (click)="openDialog(items)">{{items.title}}</span>
+            </div>
+            <div class="icons-div">
+              <button mat-icon-button color="basic" (click)="pinned(items)">
+                <div class="pin" *ngIf="items.pinned==false">
+                  <img src="../../../assets/pin.svg">
+                </div>
+                <div class="barpin" *ngIf="items.pinned==true">
+                  <img src="../../../assets/barpin.svg">
+                </div>
+              </button>
+            </div>
+          </div>
+
+          <div (click)="openDialog(items)">{{items.description}}</div>
+
+          <div class="example-chip-list">
+            <mat-chip-list #chipList>
+              <mat-chip class="chip" *ngFor="let label of items.label" [selectable]="selectable" [removable]="removable"
+                (removed)="remove(label,items.noteId)">
+                {{label.name}}
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+              </mat-chip>
+            </mat-chip-list>
+          </div>
+
+          <div *ngIf="items.remainder != null">
+            <div class="example-chip-list">
+              <br>
+              <mat-chip-list #chipList class="remainder">
+                <mat-chip class="chip" [removable]="removable" [selectable]="selectable"
+                  (removed)="removeRemainder(items)">
+                  {{items.remainder | date:'MMM'}}&nbsp;{{items.remainder | date:'d'}},&nbsp;{{items.remainder | date:'shortTime'}}
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+              </mat-chip-list>
+            </div>
+          </div>
+
+         
+          <div *ngFor="let collaborator of items.collaboratedUser" >
+            <button class = "collaborator" mat-mini-fab matTooltip={{collaborator.email}} color="primary" (click)="openDialog1(items)">
+              
+              <mat-icon>account_circle</mat-icon>
+            </button>
+          </div>
+
+
+          <div class="icons-div">
+            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end">
+            </app-icon-list>
+          </div>
+          
+        </mat-card>
+    </div>
+  </div>
+
+
+  <div *ngIf="subscribeView" class="mininote" fxLayout="column wrap" fxLayoutAlign="center center" fxFlex.xs="98"
+    fxLayoutGap="10px">
+    <div *ngFor="let items of card" class="card">
+      <div class="matcard" *ngIf="items.archive==false && items.trash==false">
+        <mat-card class="minicard" [style.backgroundColor]="items.color">
+          <div fxLayout="row" fxLayoutAlign="space-between start">
+
+            <div fxLayout="row" class="title">
+              <span (click)="openDialog(items)">{{items.title}}</span>
+            </div>
+
+            <div class="icons-div">
+              <button mat-icon-button color="basic" (click)="pinned(items)">
+                <div class="pin" *ngIf="items.pinned==false">
+                  <img src="../../../assets/pin.svg">
+                </div>
+                <div class="barpin" *ngIf="items.pinned==true">
+                  <img src="../../../assets/barpin.svg">
+                </div>
+              </button>
+            </div>
+
+          </div>
+
+          <div>
+            <span (click)="openDialog(items)">{{items.description}}</span>
+          </div>
+
+
+          <div class="example-chip-list">
+            <mat-chip-list #chipList>
+              <mat-chip class="chip" *ngFor="let label of items.label" [selectable]="selectable" [removable]="removable"
+                (removed)="remove(label,items.noteId)">
+                {{label.name}}
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+              </mat-chip>
+            </mat-chip-list>
+          </div>
+
+          <div *ngIf="items.remainder != null">
+            <div class="example-chip-list">
+              <br>
+              <mat-chip-list #chipList class="remainder">
+                <mat-chip class="chip" [removable]="removable" [selectable]="selectable"
+                  (removed)="removeRemainder(items)">
+                  {{items.remainder | date:'medium'}}
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+              </mat-chip-list>
+            </div>
+          </div>
+
+          <div class="icons-div">
+            <app-icon-list fxLayout="row" [card]="items" (updateEvent)=update($event) fxLayoutAlign="space-between end">
+            </app-icon-list>
+          </div>
+
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+
+
+
+
+
+
+ <!-- <div class="example-chip-list">
+              <mat-chip-list #chipList>
+                <mat-chip class="chip" *ngFor="let collaborator of items.collaboratedUser" [selectable]="selectable" [removable]="removable"
+                  (removed)="remove(label,items.noteId)">
+                  {{label.name}}
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+              </mat-chip-list>
+            </div> -->
+
+
+
+<!-- <img mat-card-avatar src="http://localhost:8080/getImage/{{token}}" /> -->
+
+<!-- <div *ngIf="items.archive==false && items.trash==false && items.pinned==true"> -->
+<!-- <div *ngIf="items.archive == false && items.trash == false"> -->
+
+ <!-- <div *ngFor="let items of cardsArray" class="card"> -->
 
 
 <!-- <div *ngIf="items.archive==false && items.trash==false && items.pinned==false">
